# colors-api

./: .gitignore  build.sh  pyproject.toml  render.yaml
app/: models.py  serializers.py  urls.py  views.py
app/migrations/: 0001_initial.py
colors/: asgi.py  settings.py  urls.py  wsgi.py
devjobs/: settings.py
