[tool.poetry]
name = "colors"
version = "0.1.0"
description = ""
authors = ["Brayden Williams <1311325+redstar504@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
